fix padding in dropdown menu to prevent overlap

--- a/src/main.css
+++ b/src/main.css
@@ -35,6 +35,7 @@ img {
   border: 1px solid black;
   border-radius: 5px 5px 5px 5px;
   padding: 10px;
+  padding-right: 32px;
   font-family: 'Work Sans';
   font-size: 16px;
   font-weight: lighter;
